syntax = "proto3"; 
// replace namespace with your own
option csharp_namespace = "RFIDSolution.Shared.Protos"; 
package ShoeModel;  

service ShoeModelProto { 
	rpc Get (ShoeModelFilter) returns (ShoeModelResponse); 
    rpc Post (ShoeModelRequest) returns (ShoeModelResponse); 
    rpc Put (ShoeModelRequest) returns (ShoeModelResponse); 
    rpc Delete (ShoeModelRequest) returns (ShoeModelResponse); 
} 

message ShoeModelResponse{ 
    bool IsSuccess = 1;
    string message = 2;
    repeated ShoeModel Data = 3;
} 

message ShoeModel{ 
    int32 id = 1;
    string name = 2;
    int32 productCount = 3;
    bool IsEditing = 4;
} 

message ShoeModelRequest{
    int32 id = 1;
    string name = 2;
}

message ShoeModelFilter { 
    optional string keyword = 1;
}